--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -222,7 +222,7 @@
 <!-- End Captain Gift Management section -->
 
 <!-- Comments section -->
-<div class="row">
+<div id="comment-section" class="row">
   <div class="col s12 offset-m2 m8 offset-l3 l6">
     <form id="comment_form" class="white">
       {% csrf_token %}
