mark notifications as read

--- a/gifts/templates/gifts/header.html
+++ b/gifts/templates/gifts/header.html
@@ -21,18 +21,21 @@
 <!-- Comment dropdown -->
 
 <ul id="notificationDropdown" class="dropdown-content">
-  <li><a class="purple-text" href="">Mark all as read<span class="material-icons right mark-read-icon" onclick="mark_notification_as_read(e);">mark_email_read</span></a></li>
+  <li><a class="purple-text" onclick="mark_notifications_as_read();">Mark all as read<span class="material-icons right dropdown-icon" onclick="mark_notification_as_read(e);">mark_email_read</span></a></li>
   {% for notification in notifications %}
   <li id="notificationItem{{notification.id}}">
-      <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}</a>
+      <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}
+        <span class="material-icons right dropdown-icon">markunread</span>
+      </a>
   </li>
   {% endfor %}
 </ul>
 
 <ul id="notificationDropdownMobile" class="dropdown-content">
+  <li><a class="purple-text" onclick="mark_notifications_as_read();">Mark all as read<span class="material-icons right dropdown-icon" onclick="mark_notification_as_read(e);">mark_email_read</span></a></li>
   {% for notification in notifications %}
   <li id="notificationItem{{notification.id}}">
-    <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}</a>
+      <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}</a>
   </li>
   {% endfor %}
 </ul>
@@ -89,7 +92,7 @@
         </li>
         {% endif %}
         {% if notifications %}
-        <li>
+        <li id="notifications-nav">
           <a id="notification_drop_trigger" class="dropdown-trigger" href="#!" data-target="notificationDropdown">Notifications<i
               class="material-icons right">arrow_drop_down</i>
             <span id="invitationCounter" class="new badge">{{notifications.count}}</span></a>
@@ -124,7 +127,7 @@
   {% endif %}
 
     {% if notifications %}
-    <li>
+    <li id="notfications-nav-mobile">
       <a class="dropdown-trigger" href="#!" data-target="notificationDropdownMobile">Notifications<i
           class="material-icons right">arrow_drop_down</i>
         <span id="invitationCounter" class="new badge">{{notifications.count}}</span></a>
