--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -224,10 +224,28 @@
 <!-- Comments section -->
 <div id="comment-section" class="row">
   <div class="col s12 offset-m2 m8 offset-l3 l6">
-    <form id="comment_form" class="white">
+    <form id="comment_form" onsubmit="ajax_post_comment('{{gift.id}}')" class="white">
       {% csrf_token %}
       {{comment_form.content}}
-      <button class="btn" onclick="ajax_post_comment('{{gift.id}}')">Comment</button>
+      <button class="btn">Comment</button>
+      <a class="btn" onclick="refresh_comments('{{gift.id}}')">
+        <div class="valign-wrapper">
+          <i id="comments-refresh" class="material-icons tooltipped" data-position="bottom" data-tooltip="Refresh comments">refresh</i>
+          <!-- Spinner -->
+          <div style="display:none;" id="comments-loading" class="preloader-wrapper small active">
+            <div class="spinner-layer spinner-blue-only">
+              <div class="circle-clipper left">
+                <div class="circle"></div>
+              </div><div class="gap-patch">
+                <div class="circle"></div>
+              </div><div class="circle-clipper right">
+                <div class="circle"></div>
+              </div>
+            </div>
+          </div>
+          <!-- End Spinner -->
+        </div>
+      </a>
     </form>
     <ul class="collection" id="comment-list">
       {% for comment in gift.get_all_comments %}
