no captain selected section

--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -59,7 +59,7 @@
         $("#gift_drop_trigger").dropdown({
             constrainWidth: false,
             coverTrigger: false,
-            hover: true,
+            // hover: true,
         });
     });
 
