--- a/gifts/templates/gifts/components/captain_gift_management.html
+++ b/gifts/templates/gifts/components/captain_gift_management.html
@@ -21,7 +21,7 @@
           <span class="green-text"> -Confirmed</span>
           {% else %}
           <span class="amber-text text-darken-3"> -Awaiting payment</span>
-          <button class="btn right">Confirm Payment</button>
+          <a class="btn right">Confirm Payment</a>
           {% endif %}
         </p>
         {% endif %}
